--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,12 @@
 }
 
 html {
-  height: '100%';
-  width: '100%';
+  height: '100vh';
+  width: '100vw';
 }
 
 body {
-  height: '100%';
-  width: '100%';
+  height: '100vh';
+  margin: 0;
+  width: '100vw';
 }
